manifests/externalsvc/bbq-bookkeeper-demo1.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: bbq-bookkeeper-demo1-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: bbq-bookkeeper-demo1-svc
subsets:
  - addresses:
    - ip: 10.0.1.164
    ports:
    - port: 8080
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-bbq-bookkeeper-demo1
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - hosts:
        - bbq-bookkeeper-demo1.pxbbq.com
      secretName: bbq-bookkeeper-demo1-tls
  rules:
    - host: bbq-bookkeeper-demo1.pxbbq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bbq-bookkeeper-demo1-svc
                port:
                  number: 8080
