manifests/externalsvc/dbmarlin.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: dbmarlin-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: dbmarlin-svc
subsets:
  - addresses:
    - ip: 10.0.1.104
    ports:
    - port: 9090
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-dbmarlin
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - hosts:
        - dbmarlin.ccrow.org
      secretName: dbmarlin-tls
  rules:
    - host: dbmarlin.ccrow.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbmarlin-svc
                port:
                  number: 9090
