manifests/externalsvc/lab.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: labrancher-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: labrancher-svc
subsets:
  - addresses:
    - ip: 10.0.5.119
    ports:
    - port: 8081
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-rancher
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - rancher.pxbbq.com
      secretName: labranchertls
  rules:
    - host: rancher.pxbbq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: labrancher-svc
                port:
                  number: 8081
---
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: pxbbq-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: pxbbq-svc
subsets:
  - addresses:
    - ip: 10.0.5.12
    ports:
    - port: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-pxbbq
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - www.pxbbq.com
      secretName: pxbbqtls
  rules:
    - host: www.pxbbq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pxbbq-svc
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: pxbbqdr-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: pxbbqdr-svc
subsets:
  - addresses:
    - ip: 10.0.5.22
    ports:
    - port: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-pxbbqdr
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - dr.pxbbq.com
      secretName: pxbbqdrtls
  rules:
    - host: dr.pxbbq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pxbbqdr-svc
                port:
                  number: 80
