manifests/externalsvc/nas02.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: nas02-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: nas02-svc
subsets:
  - addresses:
    - ip: 10.0.2.9
    ports:
    - port: 5000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-nas02
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/16"
spec:
  tls:
    - hosts:
        - nas02-web.lan.ccrow.org
      secretName: nas02-tls
  rules:
    - host: nas02-web.lan.ccrow.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nas02-svc
                port:
                  number: 5000
