manifests/externalsvc/pihole.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: pihole-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: pihole-svc
subsets:
  - addresses:
    - ip: 10.0.1.4
    ports:
    - port: 8080
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-pihole
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - pihole.lan.ccrow.org
      secretName: pihole-tls
  rules:
    - host: pihole.lan.ccrow.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-svc
                port:
                  number: 8080
