manifests/externalsvc/plex.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: plex-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: plex-svc
subsets:
  - addresses:
    - ip: 10.0.3.50
    ports:
    - port: 32400
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-plex
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: nginx

spec:
  tls:
    - hosts:
        - plex.ccrow.org
      secretName: plex-tls
  rules:
    - host: plex.ccrow.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-svc
                port:
                  number: 32400
