manifests/externalsvc/rancher-external.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: rancher-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: rancher-svc
subsets:
  - addresses:
    - ip: 10.0.1.104
    ports:
    - port: 8081
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-rancher-ext
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - rancher.ccrow.org
      secretName: rancher-ext-tls
  rules:
    - host: rancher.ccrow.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher-svc
                port:
                  number: 8081
