manifests/externalsvc/synology-chat.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: synology-chat-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: synology-chat-svc
subsets:
  - addresses:
    - ip: 10.0.1.8
    ports:
    - port: 5003
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-synology-chat
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - hosts:
        - chat.ccrow.org
      secretName: synology-tls
  rules:
    - host: chat.ccrow.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synology-chat-svc
                port:
                  number: 5003
