manifests/externalsvc/synology.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: externalsvc
  name: synology-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: externalsvc
  name: synology-svc
subsets:
  - addresses:
    - ip: 10.0.2.8
    ports:
    - port: 5000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-synology
  namespace: externalsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,73.97.37.245/32,136.226.0.0/16,104.167.184.2/32,71.212.35.212/32,174.21.143.8/32,76.22.86.230/32"
spec:
  tls:
    - hosts:
        - synology.ccrow.org
      secretName: synology-tls
  rules:
    - host: synology.ccrow.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synology-svc
                port:
                  number: 5000
